# MultiCord

./: .env (OLD)  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_ORIGINAL.md  SECURITY_FIXES_APPLIED.md  debug_processes.py  docker-compose.yml  fix_naming_conflict.py  main.py  platform_config.json  platform_main.py  publish_to_pypi.bat  publish_to_pypi.sh  pyproject.toml  requirements.txt  setup.py  start.py
bot_platform/: __init__.py  client_manager.py  client_runner.py  clients_db.json  config_manager.py  deployment_tools.py  enhanced_launcher.py  launcher.py  process_manager.py  service_manager.py  template_manager.py
bot_platform/runtime/: client_processes.json
clients/: __init__.py
clients/_template/: .env.template  branding.py.template  config.json.template  config.py.template  features.py.template  flags.py.template
clients/client_two/: __init__.py  branding.py  config.py
clients/default/: __init__.py  branding.py  config.py  features.py
clients/link_guard/: branding.py  config.py  flags.py
clients/secondary_app_node/: branding.py  config.py  features.py
cogs/: base_commands.py  basic_commands.py  example_permissions.py  permission_manager.py  permissions_manager.py
config/: settings.py
core/: __init__.py  application.py
core/cogs/: __init__.py  base_commands.py  permission_manager.py
core/config/: __init__.py  settings.py
core/utils/: __init__.py  client_embeds.py  database.py  embeds.py  error_handler.py  loguruConfig.py  permission_models.py  permission_persistence.py  permissions.py
migrations/: 001_initial_platform_schema.sql  002_api_security_infrastructure.sql
multicord/: __init__.py  __main__.py  cli.py  constants.py
multicord/api/: __init__.py  client.py  models.py
multicord/auth/: __init__.py  device.py  discord.py
multicord/commands/: __init__.py  auth.py  bot.py  cache.py  cog.py  config.py  repo.py  token.py  venv.py
multicord/docker/: __init__.py  docker_client.py  docker_manager.py
multicord/local/: __init__.py  bot_manager.py  health_monitor.py  process_orchestrator.py
multicord/manifests/: __init__.py  generator.py  parser.py
multicord/utils/: __init__.py  backup_manager.py  bot_detector.py  bot_updater.py  cache.py  cog_manager.py  cog_repository.py  config.py  config_merger.py  display.py  errors.py  (+10 more)
platform/: __init__.py  client_manager.py  client_runner.py  deployment_tools.py  launcher.py
platform_api/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
platform_backup/: client_manager.py  deployment_tools.py
platform_cli/: __init__.py  cli_main.py
platform_core/: __init__.py
tools/: debug_processes.py  fix_naming_conflict.py  fix_utils_imports.py  migrate_from_template.py  migrate_phase1.py  migrate_status_config.py  sync_clients.py  validate_clients.py
utils/: database.py  embeds.py  error_handler.py  exceptions.py  loguruConfig.py  permission_persistence.py  permissions.py
(+68 files in other folders)
