[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multicord"
version = "1.0.0"
description = "Run multiple Discord bots with ease - local orchestration and cloud management"
authors = [{name = "MultiCord Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: AsyncIO",
]
keywords = ["discord", "bot", "orchestration", "management", "cli"]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "keyring>=24.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "aiofiles>=23.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "types-toml",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://multicord.io"
Documentation = "https://docs.multicord.io"
Repository = "https://github.com/HollowTheSilver/MultiCord"
Issues = "https://github.com/HollowTheSilver/MultiCord/issues"
Changelog = "https://github.com/HollowTheSilver/MultiCord/blob/main/CHANGELOG.md"

[project.scripts]
multicord = "multicord.cli:cli"

[tool.setuptools]
packages = ["multicord"]
include-package-data = true

[tool.setuptools.package-data]
multicord = [
    "templates/**/*",
    "templates/**/.*",
    "py.typed",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=multicord",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["multicord"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
]